logs/i3configger.log
Listing '.'...
Listing './bin'...
Compiling './bin/rst2html.py'...
Compiling './bin/rst2html4.py'...
Compiling './bin/rst2html5.py'...
Compiling './bin/rst2latex.py'...
Compiling './bin/rst2man.py'...
Compiling './bin/rst2odt.py'...
Compiling './bin/rst2odt_prepstyles.py'...
Compiling './bin/rst2pseudoxml.py'...
Compiling './bin/rst2s5.py'...
Compiling './bin/rst2xetex.py'...
Compiling './bin/rst2xml.py'...
Compiling './bin/rstpep2html.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/daemon'...
Listing './lib/python3.5/site-packages/docutils'...
Listing './lib/python3.5/site-packages/docutils/languages'...
Listing './lib/python3.5/site-packages/docutils/parsers'...
Listing './lib/python3.5/site-packages/docutils/parsers/rst'...
Listing './lib/python3.5/site-packages/docutils/parsers/rst/directives'...
Listing './lib/python3.5/site-packages/docutils/parsers/rst/include'...
Listing './lib/python3.5/site-packages/docutils/parsers/rst/languages'...
Listing './lib/python3.5/site-packages/docutils/readers'...
Listing './lib/python3.5/site-packages/docutils/transforms'...
Listing './lib/python3.5/site-packages/docutils/utils'...
Listing './lib/python3.5/site-packages/docutils/utils/math'...
Listing './lib/python3.5/site-packages/docutils/writers'...
Listing './lib/python3.5/site-packages/docutils/writers/html4css1'...
Listing './lib/python3.5/site-packages/docutils/writers/html5_polyglot'...
Listing './lib/python3.5/site-packages/docutils/writers/latex2e'...
Listing './lib/python3.5/site-packages/docutils/writers/odf_odt'...
Listing './lib/python3.5/site-packages/docutils/writers/pep_html'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/big-black'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/big-white'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/default'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/medium-black'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/medium-white'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/small-black'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/small-white'...
Listing './lib/python3.5/site-packages/docutils/writers/xetex'...
Listing './lib/python3.5/site-packages/docutils-0.14.dist-info'...
Listing './lib/python3.5/site-packages/i3configger'...
Compiling './lib/python3.5/site-packages/i3configger/build.py'...
***   File "./lib/python3.5/site-packages/i3configger/build.py", line 14
    log.info(f"start building from {configPath}")
                                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/i3configger/config.py'...
***   File "./lib/python3.5/site-packages/i3configger/config.py", line 64
    raise exc.ConfigError(f"file not found: {path}")
                                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/i3configger/ipc.py'...
***   File "./lib/python3.5/site-packages/i3configger/ipc.py", line 10
    log.info(f'set i3 refresh method to {I3.refresh.__name__}', )
                                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/i3configger/main.py'...
***   File "./lib/python3.5/site-packages/i3configger/main.py", line 24
    print(f"i3configger {base.get_version()}")
                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/i3configger/message.py'...
***   File "./lib/python3.5/site-packages/i3configger/message.py", line 41
    f"nesting of keys only sensible with {CMD.SHADOW}")
                                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/i3configger/partials.py'...
***   File "./lib/python3.5/site-packages/i3configger/partials.py", line 119
    log.info(f"excluding {path} because it starts with a dot")
                                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/i3configger/paths.py'...
***   File "./lib/python3.5/site-packages/i3configger/paths.py", line 46
    f"can't find i3 config at the standard locations: {candidates}")
                                                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/i3configger/watch.py'...
***   File "./lib/python3.5/site-packages/i3configger/watch.py", line 38
    log.debug(f"initialized {watcher}")
                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/i3configger-0.8.0.egg-info'...
Listing './lib/python3.5/site-packages/lockfile'...
Listing './lib/python3.5/site-packages/lockfile-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/psutil'...
Listing './lib/python3.5/site-packages/psutil/tests'...
Listing './lib/python3.5/site-packages/psutil-5.4.3.egg-info'...
Listing './lib/python3.5/site-packages/python_daemon-2.1.2.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
